--- a/healthWebApp/src/styles/_variables.sass
+++ b/healthWebApp/src/styles/_variables.sass
@@ -10,6 +10,7 @@ $light-color: #FFFFFF
 $gray-color: #A5A5A5
 $primary-text-color: #2F2D61
 $secondary-text-color: #8176B6
+$input-color: #a298d7
 $input-color:#D9D9D9
 $tertiary-text-color: #262624
 $primary-hover-color: #E767A3
