--- a/healthWebApp/src/styles/global.sass
+++ b/healthWebApp/src/styles/global.sass
@@ -19,7 +19,7 @@ body
   font-family: $font-source
   display: grid
   place-content: center
-  background-color: rgba($dark-color, 0.7)
+  background-color: rgba($tertiary-text-color, 0.7)
   color: $primary-text-color
 
 #root
