--- a/healthWebApp/src/components/Footer/styles.sass
+++ b/healthWebApp/src/components/Footer/styles.sass
@@ -10,11 +10,19 @@ $grey-color: #A5A5A5
   z-index: 10
   bottom: 0
   background-color: $light-color
-  box-shadow: 0px 4px 20px 0px rgba($dark-color, 0.25)
+  box-shadow: 0px 4px 20px 0px rgba($tertiary-text-color, 0.25)
   padding: 0 20px
+  display: flex
   @include flexCenter(row, space-between, center, 0)
+
   .option
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 5px
+    padding: 10px
     font-size: 2.6rem
     color: $grey-color
     span
       font-size: 1.3rem
+      font-family: $secondary-font
