--- a/healthWebApp/src/pages/Home/styles.sass
+++ b/healthWebApp/src/pages/Home/styles.sass
@@ -1,1 +1,90 @@
 @use '../../styles/_variables' as *
+@use '../../styles/_mixins' as *
+
+html, body 
+  margin: 0
+  padding: 0
+
+
+.main-home 
+    background-image: url("../../assets/images/wallpaper7.jpeg")
+    background-size: cover
+    height: 100vh
+    display: flex
+    justify-content: center
+    align-items: center
+
+.container__home
+    margin-top: -700px
+
+.home__title--title
+    font-size: 70px
+    margin-left: 30px
+    margin-right: 0px
+    margin-bottom: 0px
+    padding-top: 680px
+
+.home__title--subtitle
+    font-size: 32px
+    padding-left: 30px
+    padding-right: 20px
+    margin-top: 0px
+
+.home__title--paragraph
+    font-size: 24px
+    padding-left: 30px
+    margin-top: 15px
+    font-family: $secondary-font
+    color: $tertiary-text-color
+    font-weight: $bold-weight
+  
+.container--buttonRound
+    display: flex
+    justify-content: center
+    align-items: center
+    width: 380px
+    height: 100px
+.buttonRound
+    width: 60px
+    height: 60px
+    border-radius: 50%
+    background-color: #E1DEEB
+    display: flex
+    justify-content: center
+    align-items: center
+    margin: 20px
+    font-size: 24px
+    border: none
+    cursor: pointer
+    
+.buttonRound__icon
+    width: 30px
+    height: 30px
+
+.secondary-pr
+    margin-left: 20px
+    font-size: 22px
+    font-family: $secondary-font
+    font-weight: $extrabold-weight
+
+.container--secondary
+    display: grid
+    justify-content: center
+    flex-direction: row
+    align-items: center
+    gap: 50px
+
+.container--buttonRound
+    display: flex
+    justify-content: center
+    align-items: center
+
+.secondary-buttons
+    flex-direction: column
+    display: flex
+    align-items: center
+    gap: 20px
+    &-btn 
+        @include buttonStyle2()
+        gap: 20px
+        margin: 10px
