maquetado y estilos terminados

--- a/healthWebApp/src/styles/_variables.sass
+++ b/healthWebApp/src/styles/_variables.sass
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100,200,300,400,500,600,700,800,900&family=Metropolis:wght@100,200,300,400,500,600,700,800,900&display=swap')
-
-
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100,200,300,400,500,600,700,800,900&family=Poppins:wght@100,200,300,400,500,600,700,800,900&display=swap')
 /* Colors */
 $primary-color: #2F2D61
 $secondary-color: #E1DEEB
@@ -18,7 +16,7 @@ $primary-hover-color: #E767A3
 
 /* Fonts */
 $font-source: 'Raleway', sans-serif
-$secondary-font: "Metropolis"
+$secondary-font: "Poppins"
 $light-weight: 300
 $regular-weight: 400
 $medium-weight: 500
