--- a/healthWebApp/src/pages/PhotoTaking/styles.sass
+++ b/healthWebApp/src/pages/PhotoTaking/styles.sass
@@ -1,2 +1,83 @@
 @use '../../styles/_variables' as *
 @use '../../styles/_mixins' as *
+
+.photoTaking
+  background-image: url("../../assets/images/wallpaper4.png")
+  background-size: cover
+  height: 100vh
+  display: flex
+  justify-content: center
+  align-items: center
+
+  &__topBar
+    max-width: $mobile-width
+    width: 100%
+    height: 60px
+    position: fixed
+    top: 0
+    left: 280px
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 10px 20px
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1)
+    z-index: 999
+
+    .photoTaking__backButton, .photoTaking__fi-more 
+      background-color: transparent
+      border: none
+      cursor: pointer
+    
+
+    .photoTaking__backButton 
+      font-size: 20px
+    
+    .photoTaking__fi-more 
+      font-size: 20px
+
+    .photoTaking__pageDescription 
+      font-size: 14px
+      color: $tertiary-text-color
+      
+  // Estilos correspondientes a la barra descriptiva
+  &__container--capture
+    background-color: #E1DEEB
+    width: 299px
+    height: 367px
+    border-radius: 30px
+    margin: 4px auto 0
+    display: flex
+    justify-content: center
+    align-items: center
+
+  &__container--caption
+    display: grid
+    justify-content: space-around
+    font-size: 18px
+    font-family: $secondary-font
+    font-weight: $regular-weight
+    margin-top: 15px
+
+
+  &__container--options
+    display: grid
+    justify-content: space-around
+    margin-top: 20px
+    gap: 25px
+
+  &__container--title
+    color: $tertiary-color
+    font-family: $secondary-font
+    font-weight: $regular-weight
+    font-size: 17px
+    padding: 0px 30px 10px
+    text-align: center
+    line-height: 21px
+    
+
+
+
+.submitButton
+    @include buttonStyle()
+    font-weight: $bold-weight
