--- a/healthWebApp/src/pages/PaymentValidation/styles.sass
+++ b/healthWebApp/src/pages/PaymentValidation/styles.sass
@@ -1,2 +1,110 @@
 @use '../../styles/_variables' as *
 @use '../../styles/_mixins' as *
+
+
+.paymentValidation
+  background-image: url("../../assets/images/wallpaper5.png")
+  background-size: cover
+  height: 100vh
+  display: flex
+  justify-content: center
+  align-items: center
+
+  &__topBar
+    max-width: $mobile-width
+    width: 100%
+    height: 60px
+    position: fixed
+    top: 0
+    left: 280px
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 10px 20px
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1)
+    z-index: 999
+
+    .paymentValidation__backButton, .paymentValidation__fi-more 
+      background-color: transparent
+      border: none
+      cursor: pointer
+    
+
+    .paymentValidation__backButton 
+      font-size: 20px
+    
+    .paymentValidation__fi-more 
+      font-size: 20px
+
+    .paymentValidation__pageDescription 
+      font-size: 14px
+      color: $tertiary-text-color
+
+  &__container__loadedPages
+    background-color: #E1DEEB
+    width: 132px
+    height: 164px
+    border-radius: 30px
+    margin: -20px auto 0
+    display: flex
+    justify-content: center
+    align-items: center
+
+  &__container__galery
+    display: flex
+    padding-left: 110px
+    padding-top: 10px
+
+  &__container__galery-Icon
+    border: 2px solid $tertiary-color
+    width: 10px
+    height: 10px
+    margin: 5px 20px
+    border-radius: 50%
+    background-color: #E1DEEB
+    
+
+
+  &__container-subtitle
+    font-size: 14px
+    color: $tertiary-text-color
+    font-weight: $bold-weight
+    padding: 20px 30px 10px
+    margin-top: 30px
+    margin-bottom: 20px
+    
+
+  &__container-paragraph
+    padding: 2px 30px 10px
+    font-size: 14px
+    color: $secondary-text-color
+
+
+  &__container-warning
+    padding: 10px
+    text-align: right
+    font-size: 12px
+    padding-left: 40px
+    padding-right: 30px
+
+
+  &__container-paymentAmount
+    background: $secondary-color
+    border-radius: 40px
+    margin-left: 30px
+    margin-right: 30px
+
+
+  &__container-button
+    @include buttonStyle()
+    align-content: center
+    align-items: center
+    margin-top: 40px
+    margin-left: 100px
+
+.cost
+    font-size: 25px
+    color: $tertiary-color
+    font-weight: bold
+    padding-left: 140px
