--- a/healthWebApp/src/pages/SuccessfulPayment/styles.sass
+++ b/healthWebApp/src/pages/SuccessfulPayment/styles.sass
@@ -1,2 +1,42 @@
 @use '../../styles/_variables' as *
 @use '../../styles/_mixins' as *
+
+
+.SuccessfullPayment
+  background-image: url("../../assets/images/wallpaper4.png")
+  background-size: cover
+  height: 100vh
+  display: flex
+  justify-content: center
+  align-items: center
+
+  &__topBar
+    max-width: $mobile-width
+    width: 100%
+    height: 60px
+    position: fixed
+    top: 0
+    left: 280px
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 10px 20px
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1)
+    z-index: 999
+
+    .SuccessfullPayment__backButton, .SuccessfullPayment__fi-more 
+      background-color: transparent
+      border: none
+      cursor: pointer
+    
+
+    .SuccessfullPayment__backButton 
+      font-size: 20px
+    
+    .SuccessfullPayment__fi-more 
+      font-size: 20px
+
+    .SuccessfullPayment__pageDescription 
+      font-size: 14px
+      color: $tertiary-text-color
