--- a/healthWebApp/src/pages/PaymentMethod/styles.sass
+++ b/healthWebApp/src/pages/PaymentMethod/styles.sass
@@ -16,7 +16,7 @@
     height: 60px
     position: fixed
     top: 0
-    left: 280px
+    left: 25px
     width: 100%
     display: flex
     justify-content: space-between
@@ -40,3 +40,110 @@
     .PaymentMethod__pageDescription 
       font-size: 14px
       color: $tertiary-text-color
+
+  .PaymentMethod__container
+      width: 90%
+      height: 90%
+
+      &-title1
+        font-size: 35px
+        font-weight: $bold-weight
+        text-align: center
+        margin-top: 30px
+
+      &-title2
+        font-size: 35px
+        font-weight: $bold-weight
+        color: $secondary-text-color
+        text-align: center
+
+      &-paragraph
+        font-weight: $bold-weight
+        font-size: 18px
+        text-align: center
+        
+      
+      &-small
+        padding-top: 20px
+        text-align: center
+        padding-bottom: 10px
+        margin-top: 40px
+        margin-bottom: 20px
+
+      &-method
+        display: flex
+
+      &-bolsillo
+        display: flex
+        justify-content: center
+        align-items: center
+        margin-top: 20px
+      
+      &-subtitle
+        font-size: 20px
+        margin-top: 30px
+        
+
+      &-dataPay
+        border: 4px solid #33FFFF
+        font-size: 10px
+          
+      &-Btn
+        border: 4px solid #FF33F6
+        @include buttonStyle()
+        margin-top: 60px
+        margin-left: 75px
+
+.type
+  width: 200px
+  height: 50px
+  background: $secondary-color
+  display: flex
+  border-radius: 40px
+  margin-left: 10px
+  border: 2px solid $tertiary-color
+  background: white
+  align-content: center
+
+.iconPay
+  width: 50px
+  height: 50px
+  margin-left: -2px
+  margin-top: -2px
+
+.iconPay2
+  width: 50px
+  height: 50px
+  margin-left: 15px
+  margin-left: -2px
+  margin-top: -2px
+  border: 2px solid $primary-color
+  border-radius: 50px
+  padding: 2px
+
+.bolsilloStyle
+  @include buttonStyle() // Si este mixin ya incluye estilos como tamaño, puedes ajustarlos aquí mismo
+  width: 200px // Ajusta el ancho según tus necesidades
+  height: 40px // Ajusta la altura según tus necesidades
+  display: flex
+  justify-content: center
+  align-items: center
+  background: $input-color
+  color: $tertiary-color
+  margin-top: 15px
+  gap: 10px
+  
+  & svg
+    width: 30px // Ancho del ícono
+    height: 30px // Alto del ícono
+    fill: #8176B6 // Color del ícono
+
+.paragraph2
+  margin-top: 20px
+  font-size: 20px
+  border: 4px solid red
+  color: $tertiary-color
+
+.container3
+  display: flex
+  gap: 80px
