--- a/healthWebApp/src/pages/SuccessfulPayment/styles.sass
+++ b/healthWebApp/src/pages/SuccessfulPayment/styles.sass
@@ -9,14 +9,13 @@
   display: flex
   justify-content: center
   align-items: center
-
   &__topBar
     max-width: $mobile-width
     width: 100%
     height: 60px
     position: fixed
     top: 0
-    left: 730px
+    left: 25px
     width: 100%
     display: flex
     justify-content: space-between
@@ -30,7 +29,6 @@
       border: none
       cursor: pointer
     
-
     .SuccessfullPayment__backButton 
       font-size: 20px
     
@@ -40,3 +38,61 @@
     .SuccessfullPayment__pageDescription 
       font-size: 14px
       color: $tertiary-text-color
+
+  .SuccessfullPayment__container
+    width: 90%
+    height: 90%
+    &-title
+      text-align: center
+      font-size: 35px
+      font-weight: $bold-weight
+    &-check
+      background: $secondary-color
+      border-radius: 100px
+      width: 200px
+      height: 200px
+      margin-left: 70px
+    &-subtitle
+      font-size: 23px
+      font-weight: $bold-weight
+      margin-top: 45px
+    &-receipt
+      text-align: center
+      font-size: 50px
+      font-weight: $bold-weight
+      color: $tertiary-color
+      margin-top: 30px
+      margin-bottom: 30px
+    &-share
+      background: $secondary-color
+      border-radius: 50px
+      width: 55px
+      height: 55px
+      margin-left: 75px
+      margin-top: 20px
+    &-btn
+      align-content: center
+      align-items: center
+      margin-top: 40px
+      margin-left: 80px
+  
+.checkIcon
+  width: 100px
+  height: 100px
+  align-content: center
+  margin-top: 50px
+  margin-left: 50px
+  
+.shareIcon
+  width: 34px
+  height: 31px
+  
+.shareIcon2
+  width: 34px
+  height: 31px
+  
+
+.btnConfirm
+  margin-top: 40px
+  @include buttonStyle()
+  
