maquetado y estilos Doc-home/ correcciones de otros componentes

--- a/healthWebApp/src/pages/PaymentMethod/styles.sass
+++ b/healthWebApp/src/pages/PaymentMethod/styles.sass
@@ -62,7 +62,7 @@
         padding-top: 20px
         text-align: center
         padding-bottom: 10px
-        margin-top: 40px
+        margin-top: 30px
         margin-bottom: 20px
       &-method
         display: flex
@@ -77,9 +77,9 @@
       &-dataPay
         font-size: 10px
       &-Btn
-        @include buttonStyle()
+        @include buttonStyleHome()
         margin-top: 60px
-        margin-left: 75px
+        margin-left: 5px
 
 .type
   width: 200px
