--- a/healthWebApp/src/pages/Welcome/styles.sass
+++ b/healthWebApp/src/pages/Welcome/styles.sass
@@ -1,7 +1,7 @@
 @use '../../styles/_variables' as *
 
 .main-welcome
-  background-image: url("../../assets/images/wallpaper2.png")
+  background-image: url("../../assets/images/wallpaper1.png")
   background-size: cover
   height: 100vh
   display: flex
@@ -9,25 +9,25 @@
   align-items: center
 
 .container
-  width: 394px
+  width: 390px
   height: 674px
   background: white
   border-top-left-radius: 73px
   border-top-right-radius: 73px
   display: flex
   flex-direction: column
-  align-itmes: center
-  margin-top: 238px
+  align-items: center
+  margin-top: 40px
+  margin-left: 2px
   
 
-  &__subtitle
+  /* &__subtitle
     font-size: 24px
     font-style: normal
     text-align: center
     font-weight: 500
     line-height: 87.741% /* 21.058px */
-    letter-spacing: 0.96px
-    margin-bottom: 33px
+  
 
 .container-rols
   display: flex
@@ -100,10 +100,9 @@
   width: 120px /* Ajusta el ancho según sea necesario */
   height: 120px /* Ajusta la altura según sea necesario */
 
-h2
-  font-size: 1.6rem
-  margin-top: 0
-  margin-bottom: 0
+.welcomeTitle
+  font-size: 20px
+  font-weight: 20px
 
 .pd 
   font-size: 0.7rem
