--- a/healthWebApp/src/pages/PaymentValidation/styles.sass
+++ b/healthWebApp/src/pages/PaymentValidation/styles.sass
@@ -62,15 +62,13 @@
     border-radius: 50%
     background-color: #E1DEEB
   &__container-subtitle
-    font-size: 14px
-    color: $tertiary-text-color
-    font-weight: $bold-weight
+    @include subtitleH3()
     padding: 20px 30px 10px
     margin-top: 30px
     margin-bottom: 20px
   &__container-paragraph
     padding: 2px 30px 10px
-    font-size: 14px
+    font-size: 15px
     color: $secondary-text-color
   &__container-warning
     padding: 10px
@@ -84,11 +82,9 @@
     margin-left: 30px
     margin-right: 30px
   &__container-button
-    @include buttonStyle()
-    align-content: center
-    align-items: center
+    @include buttonStyleHome()
     margin-top: 40px
-    margin-left: 100px
+    margin-left: 20px
 
 .cost
     font-size: 25px
