--- a/healthWebApp/src/pages/SignIn/styles.sass
+++ b/healthWebApp/src/pages/SignIn/styles.sass
@@ -1,116 +1,128 @@
 @use '../../styles/_variables' as *
 @use '../../styles/_mixins' as *
 
-
-.main-signIn
+.sign-in
   background-image: url("../../assets/images/wallpaper1.png")
   background-size: cover
-  height: 100vh
+  height: 674px
+  width: 390px
   display: flex
+  flex-direction: column 
   justify-content: center
   align-items: center
-
-.sign-in
-  width: 394px
-  height: 674px
-  background: $light-color
-  border-top-left-radius: 73px
-  border-top-right-radius: 73px
-  display: flex
-  flex-direction: column
-  align-itmes: center
-  margin-top: 238px
-  &__form
-    width: 300px
-    height: 580px
-    top: 290px
-    left: 0
-    background-color: $light-color
+  &__formWrapper
+    width: 390px
+    height: 774px
+    background: white
     border-top-left-radius: 73px
     border-top-right-radius: 73px
-    padding: 30px
-    display: grid
-    gap: 25px
-    
+    display: flex
+    flex-direction: column
+    align-items: center
+    margin-top: 160px
+    margin-left: 2px
+    border: 4px solid red
+    &--title
+      @include titleH1()
+      margin-top: 50px
+      border: 4px solid yellow
     .form
-      width: 100%
-      height: 100%
-      display: grid
-      gap: 15px
-      &__input-label
-        display: grid
-        gap: 0px
-        margin-bottom: -40px
-        margin-left: 12px
-        &--label
-          @include labelStyle()
-          margin-bottom: -10px
-        &--wrapper
-          @include inputWrapper()
-          .icon
-            @include iconStyle(1.5rem, rgba($primary-text-color, 0.37))
-          .input
-            @include inputStyle()
-      &__buttons-container
         width: 100%
         height: 100%
         display: grid
-        grid-template-areas: "sign sign" "google phone"
-        margin-top: 5px
-        gap: 10px
-        margin-top: 20px
-        margin-right: -15px
-        margin-left: 0px
-        &--sign-in
-          grid-area: sign
-          @include buttonStyle2()
-        &--google 
-          grid-area: google 
-          margin-left: 10px
-          width:  150px !important
-          height: 20px
-          @include buttonStyle()
-          @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
-        &--phone
-          grid-area: phone
-          justify-self: end
-          width:  150px !important
-          height: 20px
-          margin-right: 10px
-          background-color: #8176B6 !important
-          @include buttonStyle()
-          @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
+        gap: 15px
+        border: 4px solid green
+        &__input-label
+          display: grid
+          gap: 0px
+          margin-bottom: -20px
+          margin-left: 12px
+          border: 4px solid orange
+          height: auto
+          &--label
+            @include labelStyle()
+            margin-top: 20px
+            margin-bottom: -10px
+            border: 4px solid blue
+          &--wrapper
+            @include inputWrapper()
+            border: 4px solid red
+            .icon
+              @include iconStyle(3rem, rgba($primary-text-color, 0.37))
+              border: 4px solid red
+              
+            .input
+              @include inputStyle()
+      
+        &__buttons-container
+          width: 100%
+          height: 100%
+          display: grid
+          grid-template-areas: "sign sign" "google phone"
+          margin-top: 5px
+          gap: 10px
+          margin-top: 20px
+          margin-right: -15px
+          margin-left: 0px
+          
+          &--sign-in
+            grid-area: sign
+            @include buttonStyle2()
+            margin-left: 20px
+            margin-bottom: 20px
+          
+          &--google 
+            grid-area: google 
+            margin-left: 10px
+            width: 150px !important
+            height: 20px
+            @include buttonStyle()
+            @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
+            margin-top: 0px
+          &--phone
+            grid-area: phone
+            justify-self: end
+            width: 150px !important
+            height: 20px
+            margin-right: 10px
+            background-color: #8176B6 !important
+            @include buttonStyle()
+            @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
+
     &--text
       font-size: 1.6rem
       text-align: center
       color: rgba(#123159, 0.37)
       margin-top: 10px
+      
       a
         color: $secondary-color
         text-decoration: underline
 
 h1
-    font-size: 2.4rem
-    font-weight: $bold-weight
-    color: $primary-text-color
-    padding-top: 20px
-    margin-top: 40px
-    margin-bottom: 20px
+  font-size: 2.4rem
+  font-weight: $bold-weight
+  color: $primary-text-color
+  padding-top: 20px
+  margin-top: 40px
+  margin-bottom: 20px
 
 .img-google
-    font-size: 21px
-    color: $primary-text-color
+  font-size: 21px
+  color: $primary-text-color
 
 .img-phone
-    font-size: 21px
-    color: white
+  font-size: 21px
+  color: white
 
 .letter-footer 
-    display: flex
-    gap: 5px
+  display: flex
+  gap: 5px
+
+.smaller
+  color: $tertiary-text-color
+  font-weight: $regular-weight
+  margin-right: 50px
+  margin-left: 63px
+
     
-smaller
-    color: $tertiary-text-color
-    font-weight: $regular-weight
-    margin-right: 50px
-    margin-left: 63px    
