--- a/healthWebApp/src/pages/SignUp/styles.sass
+++ b/healthWebApp/src/pages/SignUp/styles.sass
@@ -5,7 +5,7 @@
 .main-signUp
   background-image: url("../../assets/images/wallpaper2.png")
   background-size: cover
-  height: 100vh
+  height: 674px
   display: flex
   justify-content: center
   align-items: center
