--- a/healthWebApp/src/pages/Welcome/styles.sass
+++ b/healthWebApp/src/pages/Welcome/styles.sass
@@ -1,14 +1,17 @@
 @use '../../styles/_variables' as *
+@use '../../styles/_mixins' as *
 
 .main-welcome
   background-image: url("../../assets/images/wallpaper1.png")
   background-size: cover
-  height: 100vh
+  height: auto
+  width: 100%
   display: flex
   justify-content: center
   align-items: center
+  overflow: scroll
 
-.container
+.containerWelcome
   width: 390px
   height: 674px
   background: white
@@ -17,7 +20,7 @@
   display: flex
   flex-direction: column
   align-items: center
-  margin-top: 40px
+  margin-top: 260px
   margin-left: 2px
   
 
@@ -48,13 +51,14 @@
     height: 150px
     margin-top: 10px
     margin-bottom: 70px
+    margin-right: 80px
+    align-content: auto
+    
     &--admin
-      background: rgba($light-color, 0.3)
-      border-radius: 50px
-      height: 40%
-      width: 100%
-      border: 2px solid $tertiary-color
-      margin-top: 8px
+      border: 4px solid red
+      @include buttonStyleHome()
+      
+        
     &--img
         width: 100px
         height: 100px
@@ -94,7 +98,7 @@
     margin-top: 120px
     width: 270px
     margin-bottom: 0px
-    font-size: 0.7rem
+    font-size: 15px
     
 .container-rols__div--img
   width: 120px /* Ajusta el ancho según sea necesario */
@@ -105,7 +109,13 @@
   font-weight: 20px
 
 .pd 
-  font-size: 0.7rem
-  margin-top: 0
-  margin-bottom: 0
+  font-size: 14px
+  margin-top: 10px
+  margin-bottom: 10px
   text-align: center
+  color: $secondary-text-color
+.buttonAdmin
+  @include buttonStyleHome()
+
+.buttonUser
+  @include buttonStyleHome()
