--- a/healthWebApp/src/pages/SignIn/styles.sass
+++ b/healthWebApp/src/pages/SignIn/styles.sass
@@ -4,125 +4,116 @@
 .sign-in
   background-image: url("../../assets/images/wallpaper1.png")
   background-size: cover
-  height: 674px
-  width: 390px
+  height: 844px // Ajustamos la altura para que se adapte al dispositivo
+  width: 390px 
   display: flex
-  flex-direction: column 
   justify-content: center
   align-items: center
+
   &__formWrapper
     width: 390px
-    height: 774px
+    height: 844px// Cambia a auto para que la altura se ajuste según el contenido
     background: white
     border-top-left-radius: 73px
     border-top-right-radius: 73px
     display: flex
     flex-direction: column
     align-items: center
-    margin-top: 160px
     margin-left: 2px
-    border: 4px solid red
+    margin-top: 400px
+
     &--title
       @include titleH1()
       margin-top: 50px
-      border: 4px solid yellow
+
     .form
-        width: 100%
-        height: 100%
+      width: 100%
+      padding: 0px // Agrega un padding para separar los bordes del contenido
+      display: flex
+      flex-direction: column
+      font-size: 20px
+
+      .form__input-group
         display: grid
-        gap: 15px
-        border: 4px solid green
-        &__input-label
-          display: grid
-          gap: 0px
-          margin-bottom: -20px
-          margin-left: 12px
-          border: 4px solid orange
-          height: auto
-          &--label
-            @include labelStyle()
-            margin-top: 20px
-            margin-bottom: -10px
-            border: 4px solid blue
-          &--wrapper
-            @include inputWrapper()
-            border: 4px solid red
-            .icon
-              @include iconStyle(3rem, rgba($primary-text-color, 0.37))
-              border: 4px solid red
-              
-            .input
-              @include inputStyle()
-      
-        &__buttons-container
-          width: 100%
-          height: 100%
-          display: grid
-          grid-template-areas: "sign sign" "google phone"
-          margin-top: 5px
-          gap: 10px
-          margin-top: 20px
-          margin-right: -15px
-          margin-left: 0px
-          
-          &--sign-in
-            grid-area: sign
-            @include buttonStyle2()
+        gap: 35px // Ajusta el espacio entre los grupos de input
+      .form__input-label
+        width: 300px
+        height: 60px
+
+        input[type="email"],
+        input[type="password"]
+          width: 330px
+          height: 60px
+          background-color: $secondary-color
+          border-radius: 40px
+          border: 2px solid $secondary-text-color
+          font-size: 26px
+          &::placeholder
+            color: $tertiary-text-color 
+            font-size: 20px 
+            padding-left: 70px
+            text-align: left
+            width: 200px
             margin-left: 20px
-            margin-bottom: 20px
+            
+      .form__buttons-container
+        display: flex
+        flex-direction: column
+        gap: 30px // Ajusta el espacio entre los botones
+        margin-top: 50px
+        margin-left: 25px
+        
+        
+        button
+          width: 100% // Ajusta el ancho de los botones para que ocupen todo el contenedor
+          @include buttonStyleHome()
+
           
-          &--google 
-            grid-area: google 
-            margin-left: 10px
-            width: 150px !important
-            height: 20px
-            @include buttonStyle()
-            @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
-            margin-top: 0px
-          &--phone
-            grid-area: phone
-            justify-self: end
-            width: 150px !important
-            height: 20px
-            margin-right: 10px
-            background-color: #8176B6 !important
-            @include buttonStyle()
-            @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
-
-    &--text
-      font-size: 1.6rem
-      text-align: center
-      color: rgba(#123159, 0.37)
-      margin-top: 10px
-      
-      a
-        color: $secondary-color
-        text-decoration: underline
-
-h1
-  font-size: 2.4rem
-  font-weight: $bold-weight
-  color: $primary-text-color
-  padding-top: 20px
-  margin-top: 40px
-  margin-bottom: 20px
-
-.img-google
-  font-size: 21px
-  color: $primary-text-color
-
-.img-phone
-  font-size: 21px
-  color: white
-
-.letter-footer 
-  display: flex
-  gap: 5px
-
 .smaller
   color: $tertiary-text-color
   font-weight: $regular-weight
+  font-size: 18px
+  text-align: center
   margin-right: 50px
-  margin-left: 63px
+  margin-left: 50px
+  margin-top: 40px
 
-    
+.custom-input
+  margin-bottom: 20px
+  margin-top: 20px
+  width: 330px
+  margin-left: 28px
+  .input-label
+    font-size: 16px
+    font-family: 'Raleway', sans-serif
+    color: #8176B6
+    margin-bottom: 15px
+
+  .input-wrapper
+    position: relative
+
+    .input
+      width: 90%
+      height: 40px
+      padding: 10px 40px 10px 20px
+      font-size: 12px
+      border: 2px solid #8176B6
+      border-radius: 40px
+      background-color: #E1DEEB
+      color: #8176B6
+      outline: none
+
+
+      &::placeholder
+        color: #8176B6
+        font-size: 12px
+
+    .icon
+      position: absolute
+      top: 50%
+      right: 10px
+      transform: translateY(-50%)
+      color: #8176B6
+      font-size: 16px
+
+  
