--- a/healthWebApp/src/pages/SignUp/styles.sass
+++ b/healthWebApp/src/pages/SignUp/styles.sass
@@ -3,46 +3,54 @@
 
 
 .main-signUp
-  background-image: url("../../assets/images/wallpaper2.png")
+  background-image: url("../../assets/images/wallpaper1.png")
   background-size: cover
-  height: 844px // Ajustamos la altura para que se adapte al dispositivo
-  width: 390px // Ajustamos el ancho para que se adapte al dispositivo
+  height: 700px // Ajustamos la altura para que se adapte al dispositivo
+  width: 100%
   display: flex
   justify-content: center
   align-items: center
 
 .sign-up
-  width: 100% // Ajustamos el ancho al 100% para que se adapte al contenedor principal
-  max-width: 390px // Establecemos un ancho máximo para mantener la consistencia en dispositivos más grandes
-  height: auto // Permitimos que la altura se ajuste automáticamente según el contenido
-  background: $light-color
+  width: 390px
+  height: 750px// Cambia a auto para que la altura se ajuste según el contenido
+  background: white
   border-top-left-radius: 73px
   border-top-right-radius: 73px
   display: flex
   flex-direction: column
   align-items: center
-  padding: 40px // Añadimos un relleno para separar el contenido de los bordes
+  margin-left: 2px
+  margin-top: 400px
 
 
-  .check-input, .radio-input
-    opacity: 0
-  .check-label, .radio-label
-    cursor: pointer
-    border-radius: 20px
-    background-color: rgba($tertiary-color, 0.37)
-    padding: 10px
-    font-size: 1.2rem
-    letter-spacing: 0.3px
-  .radio-label
-    font-size: 1.4rem
-    
-.userPaciente
-  width: 150px
-  height: 150px
-  margin-bottom: 20px// Centrar horizontal y verticalmente
-  position: absolute
-  top: -550px
-  left: 0
-  right: 0
-  bottom:0
+  h1
+    @include titleH1()
+    padding-top: 20px
+    margin-top: 40px
+    margin-bottom: 20px
+
   
+      
+
+  .form__buttons-container
+    display: flex
+    flex-direction: column
+    gap: 30px // Ajusta el espacio entre los botones
+    margin-top: 50px
+    margin-left: 25px
+    
+    
+    button
+      width: 100% // Ajusta el ancho de los botones para que ocupen todo el contenedor
+      @include buttonStyleHome()
+      margin-right: 22px
+
+.smaller
+  color: $tertiary-text-color
+  font-weight: $regular-weight
+  font-size: 18px
+  text-align: center
+  margin-right: 50px
+  margin-left: 50px
+  margin-top: 40px
