--- a/healthWebApp/src/styles/_mixins.sass
+++ b/healthWebApp/src/styles/_mixins.sass
@@ -107,3 +107,67 @@
     height: 82px
     border-radius: 50%
   
+@mixin titleBrand()
+  font-size: 70px
+  font-family: $font-source
+  color: $primary-text-color
+
+@mixin subtitleBrand()
+  font-size: 32px
+  font-family: $font-source
+  color: $tertiary-text-color
+
+@mixin titleH1()
+  font-size: 35px
+  font-family: $font-source
+  color: $primary-text-color
+
+@mixin subtitleH3()
+  font-size: 23px
+  font-family: $font-source
+  color: $primary-text-color
+
+
+@mixin paragraph()
+  font-size: 23px
+  font-family: Poppins
+  color: $tertiary-text-color
+
+@mixin paragraph2()
+  font-size: 23px
+  font-family: $font-source
+  color: $primary-text-color
+
+@mixin paragraph3()
+  font-size: 15px
+  font-family: $font-source
+  color: $secondary-text-color
+
+@mixin warning()
+  font-size: 18px
+  font-family: Poppins
+  color: $secondary-text-color
+
+@mixin priceNumbers()
+  font-size: 50px
+  font-family: $font-source
+  color: $secondary-text-color
+
+@mixin buttonStyleHome()
+  width: 330px
+  height: 55px
+  background: $light-color
+  border-radius: 40px
+  text-align: center
+  border: 3px solid $tertiary-color
+  color: $tertiary-text-color
+  font-family: Arial, sans-serif
+  font-size: 26px
+
+@mixn buttonStyleSecondary()
+  background: $light-color
+  color: $tertiary-text-color
+  font-family: Arial, sans-serif
+  font-size: 16px
+  width: 172px
+  height: 35px
