--- a/healthWebApp/src/pages/SignIn/styles.sass
+++ b/healthWebApp/src/pages/SignIn/styles.sass
@@ -1,116 +1,121 @@
 @use '../../styles/_variables' as *
 @use '../../styles/_mixins' as *
 
-
-.main-signIn
-  background-image: url("../../assets/images/wallpaper2.png")
+.sign-in
+  background-image: url("https://res.cloudinary.com/dhhyc88td/image/upload/v1711516031/wallpaper1_fcmfxf.png")
   background-size: cover
-  height: 100vh
+  height: 844px // Ajustamos la altura para que se adapte al dispositivo
+  width: 390px 
   display: flex
   justify-content: center
   align-items: center
 
-.sign-in
-  width: 394px
-  height: 674px
-  background: $light-color
-  border-top-left-radius: 73px
-  border-top-right-radius: 73px
-  display: flex
-  flex-direction: column
-  align-itmes: center
-  margin-top: 238px
-  &__form
-    width: 300px
-    height: 580px
-    top: 290px
-    left: 0
-    background-color: $light-color
+  &__formWrapper
+    width: 390px
+    height: 844px// Cambia a auto para que la altura se ajuste según el contenido
+    background: white
     border-top-left-radius: 73px
     border-top-right-radius: 73px
-    padding: 30px
-    display: grid
-    gap: 25px
-    
+    display: flex
+    flex-direction: column
+    align-items: center
+    margin-left: 2px
+    margin-top: 400px
+
+    &--titleSignIn
+      @include titleH1()
+      margin-top: 60px
+      margin-bottom: 20px
+
+
     .form
       width: 100%
-      height: 100%
-      display: grid
-      gap: 15px
-      &__input-label
+      padding: 0px // Agrega un padding para separar los bordes del contenido
+      display: flex
+      flex-direction: column
+      font-size: 20px
+
+      .form__input-group
         display: grid
-        gap: 0px
-        margin-bottom: -40px
-        margin-left: 12px
-        &--label
-          @include labelStyle()
-          margin-bottom: -10px
-        &--wrapper
-          @include inputWrapper()
-          .icon
-            @include iconStyle(1.5rem, rgba($primary-text-color, 0.37))
-          .input
-            @include inputStyle()
-      &__buttons-container
-        width: 100%
-        height: 100%
-        display: grid
-        grid-template-areas: "sign sign" "google phone"
-        margin-top: 5px
-        gap: 10px
-        margin-top: 20px
-        margin-right: -15px
-        margin-left: 0px
-        &--sign-in
-          grid-area: sign
-          @include buttonStyle2()
-        &--google 
-          grid-area: google 
-          margin-left: 10px
-          width:  150px !important
-          height: 20px
-          @include buttonStyle()
-          @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
-        &--phone
-          grid-area: phone
-          justify-self: end
-          width:  150px !important
-          height: 20px
-          margin-right: 10px
-          background-color: #8176B6 !important
-          @include buttonStyle()
-          @include flexCenter($direction: row, $justify: center, $align: center, $gap: 5px)
-    &--text
-      font-size: 1.6rem
-      text-align: center
-      color: rgba(#123159, 0.37)
-      margin-top: 10px
-      a
-        color: $secondary-color
-        text-decoration: underline
+        gap: 35px // Ajusta el espacio entre los grupos de input
+      .form__input-label
+        width: 300px
+        height: 60px
 
-h1
-    font-size: 2.4rem
-    font-weight: $bold-weight
-    color: $primary-text-color
-    padding-top: 20px
-    margin-top: 40px
-    margin-bottom: 20px
+        input[type="email"],
+        input[type="password"]
+          width: 330px
+          height: 60px
+          background-color: $secondary-color
+          border-radius: 40px
+          border: 2px solid $secondary-text-color
+          font-size: 26px
+          &::placeholder
+            color: $tertiary-text-color 
+            font-size: 20px 
+            padding-left: 70px
+            text-align: left
+            width: 200px
+            margin-left: 20px
+            
+      .form__buttons-container
+        display: flex
+        flex-direction: column
+        gap: 30px // Ajusta el espacio entre los botones
+        margin-top: 50px
+        margin-left: 25px
+        
+        
+        button
+          width: 100% // Ajusta el ancho de los botones para que ocupen todo el contenedor
+          @include buttonStyleHome()
 
-.img-google
-    font-size: 21px
-    color: $primary-text-color
+          
+.smaller
+  color: $tertiary-text-color
+  font-weight: $regular-weight
+  font-size: 18px
+  text-align: center
+  margin-right: 50px
+  margin-left: 50px
+  margin-top: 40px
 
-.img-phone
-    font-size: 21px
-    color: white
+.custom-input
+  margin-bottom: 20px
+  margin-top: 20px
+  width: 330px
+  margin-left: 28px
+  .input-label
+    font-size: 16px
+    font-family: 'Raleway', sans-serif
+    color: #8176B6
+    margin-bottom: 15px
 
-.letter-footer 
-    display: flex
-    gap: 5px
-    
-smaller
-    color: $tertiary-text-color
-    font-weight: $regular-weight
-    margin-right: 50px
-    margin-left: 63px    
+  .input-wrapper
+    position: relative
+
+    .input
+      width: 90%
+      height: 40px
+      padding: 10px 40px 10px 20px
+      font-size: 12px
+      border: 2px solid #8176B6
+      border-radius: 40px
+      background-color: #E1DEEB
+      color: #8176B6
+      outline: none
+
+
+      &::placeholder
+        color: #8176B6
+        font-size: 12px
+
+    .icon
+      position: absolute
+      top: 50%
+      right: 10px
+      transform: translateY(-50%)
+      color: #8176B6
+      font-size: 16px
+
+  
