--- a/healthWebApp/src/pages/Welcome/styles.sass
+++ b/healthWebApp/src/pages/Welcome/styles.sass
@@ -1,33 +1,36 @@
 @use '../../styles/_variables' as *
+@use '../../styles/_mixins' as *
 
 .main-welcome
-  background-image: url("../../assets/images/wallpaper2.png")
+  background-image: url("../../assets/images/wallpaper1.png")
   background-size: cover
-  height: 100vh
+  height: auto
+  width: 100%
   display: flex
   justify-content: center
   align-items: center
+  overflow: scroll
 
-.container
-  width: 394px
+.containerWelcome
+  width: 390px
   height: 674px
   background: white
   border-top-left-radius: 73px
   border-top-right-radius: 73px
   display: flex
   flex-direction: column
-  align-itmes: center
-  margin-top: 238px
+  align-items: center
+  margin-top: 260px
+  margin-left: 2px
   
 
-  &__subtitle
+  /* &__subtitle
     font-size: 24px
     font-style: normal
     text-align: center
     font-weight: 500
     line-height: 87.741% /* 21.058px */
-    letter-spacing: 0.96px
-    margin-bottom: 33px
+  
 
 .container-rols
   display: flex
@@ -48,13 +51,14 @@
     height: 150px
     margin-top: 10px
     margin-bottom: 70px
+    margin-right: 80px
+    align-content: auto
+    
     &--admin
-      background: rgba($light-color, 0.3)
-      border-radius: 50px
-      height: 40%
-      width: 100%
-      border: 2px solid $tertiary-color
-      margin-top: 8px
+      border: 4px solid red
+      @include buttonStyleHome()
+      
+        
     &--img
         width: 100px
         height: 100px
@@ -94,19 +98,24 @@
     margin-top: 120px
     width: 270px
     margin-bottom: 0px
-    font-size: 0.7rem
+    font-size: 15px
     
 .container-rols__div--img
   width: 120px /* Ajusta el ancho según sea necesario */
   height: 120px /* Ajusta la altura según sea necesario */
 
-h2
-  font-size: 1.6rem
-  margin-top: 0
-  margin-bottom: 0
+.welcomeTitle
+  font-size: 20px
+  font-weight: 20px
 
 .pd 
-  font-size: 0.7rem
-  margin-top: 0
-  margin-bottom: 0
+  font-size: 14px
+  margin-top: 10px
+  margin-bottom: 10px
   text-align: center
+  color: $secondary-text-color
+.buttonAdmin
+  @include buttonStyleHome()
+
+.buttonUser
+  @include buttonStyleHome()
